--- a/pages/index.html
+++ b/pages/index.html
@@ -50,10 +50,10 @@
                                 {% for book in section.data['books']: %}
                                     <li class="carusel__item">
                                         <div class="book">
-                                            <a class="book__cover_link" href="./book/{{ book['book_id'] }}">
+                                            <a class="book__cover_link" href="./book/{{ book['book_id'] }}" style="--cover-ratio: {{ book['cover_ratio'] }}">
                                                 <img
                                                     class="book__cover"
-                                                    src="{{ url_for('static', filename='./images/covers/books/' + book['book_id'] + '.webp') }}"
+                                                    src="{{ url_for('static', filename='./images/covers/books/' + book['book_id'] + '.jpg') }}"
                                                     alt="Книга {{ book['book_name'] }} автора {{ book['author_name'] }}">
                                             </a>
                                             <a class="book__title" href="./book/{{ book['book_id'] }}" tabindex="-1">
