--- a/pages/base.html
+++ b/pages/base.html
@@ -25,7 +25,7 @@
                 <img class="header__logo" src="{{ url_for('static', filename='images/books-ru-black.svg') }}">
             </a>
             <form class="header__search" method="get" action="{{ url_for('index') }}">
-                <input class="search__field" name="search" type="text" autocomplete="off" placeholder="Книга, серия, автор, издательство">
+                <input class="search__field" inputmode="search" name="search" type="text" autocomplete="off" placeholder="Книга, серия, автор, издательство">
                 <button class="search__button" tabindex="-1" type="submit">
                     <span class="fas fa-search"></span>
                 </button>
@@ -46,6 +46,31 @@
                         Регистрация
                     </a>
                 </div>
+            {% endif %}
+            {% if current_user.is_authenticated %}
+                <ul class="header__user_menu" role="navigation">
+                    <li class="header__user_menu__item">
+                        <span>Баланс: {{ current_user.balance }}₽</span>
+                    </li>
+
+                    <li class="header__user_menu__item">
+                        <a href="{{ url_for('pay') }}">Пополнить счёт</a>
+                    </li>
+
+                    <li class="header__user_menu__item">
+                        <a href="{{ url_for('user', login=current_user.login) }}">Профиль</a>
+                    </li>
+
+                    {% if current_user.status > 0 %}
+                        <li class="header__user_menu__item">
+                            <a href="./admin">Панель управления</a>
+                        </li>
+                    {% endif %}
+
+                    <li class="header__user_menu__item">
+                        <a href="{{ url_for('logout') }}">Выйти</a>
+                    </li>
+                </ul>
             {% endif %}
             <ul class="header__menu" role="navigation">
                 <li class="header__menu__item">
@@ -99,7 +124,7 @@
                         </a>
                     </li>
                     <li class="footer__menu__item">
-                        <a href="./user">
+                        <a id="open_footer_menu_button" href="#">
                             <img src="{{ url_for('static', filename='images/user.svg') }}" style="padding: 14px 10px 15px">
                         </a>
                     </li>
@@ -111,10 +136,54 @@
                     </li>
                 {% endif %}
             </ul>
+            {% if current_user.is_authenticated %}
+                <ul class="footer__user_menu hidden" role="navigation">
+                    <li class="footer__user_menu__item">
+                        <a id="close_footer_menu_button">
+                            <img src="{{ url_for('static', filename='images/times.svg') }}">
+                        </a>
+                    </li>
+
+                    <li class="footer__user_menu__item">
+                        <span>Баланс: {{ current_user.balance }}₽</span>
+                    </li>
+
+                    <li class="footer__user_menu__item">
+                        <a href="{{ url_for('pay') }}">Пополнить счёт</a>
+                    </li>
+
+                    <li class="footer__user_menu__item">
+                        <a href="{{ url_for('user', login=current_user.login) }}">Профиль</a>
+                    </li>
+
+                    {% if current_user.status > 0 %}
+                        <li class="footer__user_menu__item">
+                            <a href="./admin">Панель управления</a>
+                        </li>
+                    {% endif %}
+
+                    <li class="footer__user_menu__item">
+                        <a href="{{ url_for('logout') }}">Выйти</a>
+                    </li>
+                </ul>
+            {% endif %}
         </footer>
         <script src="{{ url_for('static', filename='scripts/utils.js') }}"></script>
         <script src="{{ url_for('static', filename='scripts/main.js') }}"></script>
         <script>
+            window.addEventListener('load', function() {
+                let closeFooterMenuButton = document.getElementById('close_footer_menu_button');
+                let openFooterMenuButton = document.getElementById('open_footer_menu_button');
+
+                closeFooterMenuButton.addEventListener('click', function() {
+                    document.getElementsByClassName('footer__user_menu')[0].classList.add('hidden');
+                });
+
+                openFooterMenuButton.addEventListener('click', function() {
+                    document.getElementsByClassName('footer__user_menu')[0].classList.remove('hidden');
+                });
+            });
+
             {% block javascript %}
             {% endblock %}
         </script>
