--- a/pages/base.html
+++ b/pages/base.html
@@ -57,13 +57,9 @@
                         <a href="{{ url_for('pay') }}">Пополнить счёт</a>
                     </li>
 
-                    <li class="header__user_menu__item">
-                        <a href="{{ url_for('user', login=current_user.login) }}">Профиль</a>
-                    </li>
-
                     {% if current_user.status > 0 %}
                         <li class="header__user_menu__item">
-                            <a href="./admin">Панель управления</a>
+                            <a href="{{ url_for('admin') }}">Панель управления</a>
                         </li>
                     {% endif %}
 
@@ -79,17 +75,13 @@
 
                 {% if current_user.is_authenticated %}
                     <li class="header__menu__item">
-                        <a href="./mybooks">Мои книги</a>
+                        <a href="{{ url_for('mybooks') }}">Мои книги</a>
                     </li>
                 {% endif %}
 
-                <li class="header__menu__item">
-                    <a href="./genres">Жанры</a>
-                </li>
-
                 {% if current_user.is_authenticated %}
                     <li class="header__menu__item-right">
-                        <a href="./cart">Корзина</a>
+                        <a href="{{ url_for('cart') }}">Корзина</a>
                     </li>
                 {% endif %}
             </ul>
@@ -101,12 +93,6 @@
         <footer>
             <ul class="footer__menu" role="navigation">
                 <li class="footer__menu__item">
-                    <a href="./genres">
-                        <img src="{{ url_for('static', filename='images/theater-masks.svg') }}" style="padding: 14px 10px 15px">
-                    </a>
-                </li>
-
-                <li class="footer__menu__item">
                     <a href="{{ url_for('index') }}">
                         <img src="{{ url_for('static', filename='images/home.svg') }}" style="padding: 13px 10px 14px">
                     </a>
@@ -114,12 +100,12 @@
 
                 {% if current_user.is_authenticated %}
                     <li class="footer__menu__item">
-                        <a href="./mybooks">
+                        <a href="{{ url_for('mybooks') }}">
                             <img src="{{ url_for('static', filename='images/book-open.svg') }}" style="padding: 12px 12px 10px">
                         </a>
                     </li>
                     <li class="footer__menu__item">
-                        <a href="./cart">
+                        <a href="{{ url_for('cart') }}">
                             <img src="{{ url_for('static', filename='images/shopping-basket.svg') }}" style="padding: 13px 12px 12px">
                         </a>
                     </li>
@@ -152,13 +138,9 @@
                         <a href="{{ url_for('pay') }}">Пополнить счёт</a>
                     </li>
 
-                    <li class="footer__user_menu__item">
-                        <a href="{{ url_for('user', login=current_user.login) }}">Профиль</a>
-                    </li>
-
                     {% if current_user.status > 0 %}
                         <li class="footer__user_menu__item">
-                            <a href="./admin">Панель управления</a>
+                            <a href="{{ url_for('admin') }}">Панель управления</a>
                         </li>
                     {% endif %}
 
@@ -169,23 +151,25 @@
             {% endif %}
         </footer>
         <script src="{{ url_for('static', filename='scripts/utils.js') }}"></script>
-        <script src="{{ url_for('static', filename='scripts/main.js') }}"></script>
         <script>
-            window.addEventListener('load', function() {
-                let closeFooterMenuButton = document.getElementById('close_footer_menu_button');
-                let openFooterMenuButton = document.getElementById('open_footer_menu_button');
+            {% if current_user.is_authenticated %}
+                // Открытие/закрытие пользовательского меню
+                // в мобильной версии по клику на кнопки
+                window.addEventListener('load', function() {
+                    let closeFooterMenuButton = document.getElementById('close_footer_menu_button');
+                    let openFooterMenuButton = document.getElementById('open_footer_menu_button');
 
-                closeFooterMenuButton.addEventListener('click', function() {
-                    document.getElementsByClassName('footer__user_menu')[0].classList.add('hidden');
+                    closeFooterMenuButton.addEventListener('click', function() {
+                        document.getElementsByClassName('footer__user_menu')[0].classList.add('hidden');
+                    });
+
+                    openFooterMenuButton.addEventListener('click', function() {
+                        document.getElementsByClassName('footer__user_menu')[0].classList.remove('hidden');
+                    });
                 });
-
-                openFooterMenuButton.addEventListener('click', function() {
-                    document.getElementsByClassName('footer__user_menu')[0].classList.remove('hidden');
-                });
-            });
-
-            {% block javascript %}
-            {% endblock %}
+            {% endif %}
         </script>
+        {% block scripts %}
+        {% endblock %}
     </body>
 </html>
